# OpenTraceCLI

./: .gitignore  AUTHORS  HACKING  NEWS  README  README.md  TRANSFORMATION_SUMMARY.md  anykey.c  build.sh  decode.c  device.c  input.c  main.c  meson.build  meson_options.txt  opentrace-cli.h  options.c  output.c  parsers.c  session.c  show.c
.github/workflows/: ci.yml  release.yml
contrib/: org.opentrace.opentrace-cli.desktop
doc/: opentrace-cli.1
